add open api auth
